# bash

./: CMakeLists.txt  jobs.c
